# AgentPave

./: .gitignore  README.md  agentkit-conformance.yaml  agentpave-conformace.yaml  pyproject.toml
.github/workflows/: publish.yml
docs/: BASELINE.md  SPEC.md
docs/spec/: 01-identity.md  02-lifecycle.md  03-communication.md  04  04-memory.md  05-observability.md  06-reliability.md  07-security.md  08-economics.md  09-testability.md  10-developer-experience.md  11-extensibility.md  12-governance.md  13-portability.md
